# extract_RT

./: README.md
simplest_method/: XYZi.mat  XYZi.txt  XYZj.mat  estimate_RT.m  fromMAT2TXT.m  readme  rotnx.m  rotny.m  rotnz.m
using_ceres/: CMakeLists.txt  hello_world.cpp
using_ceres/data/: XYZj.txt
using_ceres/src/: extractRT.cpp
